--- a/style.css
+++ b/style.css
@@ -23,3 +23,13 @@ body {
   width: 600px;
   overflow: hidden;
 } 
+
+.quiz-header {
+  padding: 4rem;
+}
+  
+h2 {
+  padding: 1rem;
+  text-align: center;
+  margin: 0;
+}
